admin页面左侧公共部分和右侧登出完成

--- a/src/less/index.css
+++ b/src/less/index.css
@@ -1,13 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 html,
 body,
 main {
-    height: 100%;
+  height: 100%;
 }
-
-
+/* 设置超链接标签的默认样式 */
+.router-link-active {
+  text-decoration: none;
+  color: #fff;
+}
 /*# sourceMappingURL=./index.css.map */
