--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,3 +2,9 @@
 html, body, main {
      height: 100%;
    }
+
+   /* 设置超链接标签的默认样式 */
+   .router-link-active {
+    text-decoration: none;
+    color: #fff;
+}
